--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=productService
+spring.application.name=product-service
+
+server.port=${SERVER-PORT}
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service_db
+spring.datasource.username=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
