Created the GET request for all products from third party fakeStoreApi by adding the controller, DTO, service and client classes. Also added the configuration of url in application.properties file that will be hit fake store API to get the response when we make request to our localhost.

--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.username=${MYSQL-USERNAME}
 spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+fakestore.api.baseurl = https://fakestoreapi.com
+fakestore.api.product = /products
