Created the GET request for  "finding all categories" from third party fakeStoreApi by adding the method in respective classes.

--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=true
 
 fakestore.api.baseurl = https://fakestoreapi.com
 fakestore.api.product = /products
+fakestore.api.category = /categories
