--- a/userServiceApp/src/main/resources/application.properties
+++ b/userServiceApp/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.security: trace
+
 
 
 
