--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=CartService
+
+server.port = ${SERVER-PORT}
+
+# MySQL configurations
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/cart_service_db
+spring.datasource.username=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+
+
+
