--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+fakeStore.api.baseurl = https://fakestoreapi.com
+fakeStore.api.cart = /carts
 
 
