--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.show-sql=true
 fakeStore.api.baseurl = https://fakestoreapi.com
 fakeStore.api.cart = /carts
 
+user-service.api.baseurl = http://localhost:9101/users
+user-service.api.auth = /auth/validate
 
