Implement product service call and add products to cart in CartService
- Added ProductDetailsService to fetch product details from product service
- Created CartControllerForDatabase with endpoint to add products to cart
- Integrated ProductDetailsService in DatabaseCartServiceImpl for product validation
- Implemented error handling for product not found and insufficient quantity scenarios
- Updated DTOs and models for accurate data transfer and persistence

--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -16,3 +16,5 @@ fakeStore.api.cart = /carts
 user-service.api.baseurl = http://localhost:9101/users
 user-service.api.auth = /auth/validate
 
+product.api.baseurl = http://localhost:9100/db/products
+
