--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=orderService
+
+server.port=${SERVER-PORT}
+
+#MySQL configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/order_service_db
+spring.datasource.username=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
