-Completed implemented getAllAddresses() and addNewAddress() by hitting apis from user_service for validating token and users. -added exception class, address service interface, user-service configuration in application.properties file -Modified AddressController, GlobalExceptionHandler, InvalidUserAuthenticationException, TokenValidator, AddressServiceImpl classes after adding methods for implementing apis.

--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.username=${MYSQL-USERNAME}
 spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+# user-service apis
+user-service.api.baseurl = http://localhost:9101/users
+user-service.api.auth = /auth/validate
