- Added flyway dependency and mysql db connection configurations in application.properties file.

--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=paymentService
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+
