- Implemented handling incorporation of hitting user service for user authentication and validation via token in Http headers.
- Added all the relevant model, exception and service classes.

- Added user service apis and razorpay key-id and key-secret in application.properties file.

--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+# razorpay id and key details
+razorpay_key_id = ${RAZORPAY_KEY_ID}
+razorpay_key_secret = ${RAZORPAY_KEY_SECRET}
+
+#user_service configuration details
+user-service.api.baseurl = http://localhost:9101/users
+user-service.api.auth = /auth/validate
