- Added order_service client package in payment service which helps in hitting the order service rest apis and getting the order details.
- This client package includes OrderDetailsService, OrderResponseDto, OrderItemDto, OrderNotFoundException classes.

-Also changes the package name in order_service from products to productServiceClient.

--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -13,3 +13,6 @@ razorpay_key_secret = ${RAZORPAY_KEY_SECRET}
 #user_service configuration details
 user-service.api.baseurl = http://localhost:9101/users
 user-service.api.auth = /auth/validate
+
+#order_service configuration details
+order-service.api.baseurl = http://localhost:9103/api/orders
