--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=paymentService
 
+server.port=${SERVER-PORT}
+
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=${MYSQL-USERNAME}
+spring.datasource.url=jdbc:mysql://localhost:3306/payment_service_db
+spring.datasource.username=${MYSQL-USERNAME}
 spring.datasource.password=${MYSQL-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
