- Added service discovery application. Included all dependencies and configuration.
- Added all the eureka service discovery dependency and configurations in all product-service, user-service, order-service, cart-service and payment services.

--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -18,3 +18,5 @@ user-service.api.auth = /auth/validate
 
 product.api.baseurl = http://localhost:9100/db/products
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
