--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -16,3 +16,6 @@ user-service.api.auth = /auth/validate
 
 # product-service api
 product.api.baseurl = http://localhost:9100/db/products
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
