--- a/userServiceApp/src/main/resources/application.properties
+++ b/userServiceApp/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.security: trace
 
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 
