--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -19,3 +19,6 @@ user-service.api.auth = /auth/validate
 
 #order_service configuration details
 order-service.api.baseurl = http://localhost:9103/api/orders
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
