--- a/emailNotificationService/src/main/resources/application.properties
+++ b/emailNotificationService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=emailNotificationService
 
 server.port=${SERVER_PORT}
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+consumer.bootstrap-servers.address=localhost:9092
 spring.kafka.consumer.group-id=email
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
