--- a/userServiceApp/src/main/resources/application.properties
+++ b/userServiceApp/src/main/resources/application.properties
@@ -15,4 +15,10 @@ logging.level.org.springframework.security: trace
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
+#kafka configurations
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.topic.name=user_topics
+
 
