--- a/emailNotificationService/src/main/resources/application.properties
+++ b/emailNotificationService/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=emailNotificationService
 
-server.port=${SERVER_PORT}
+server.port=${SERVER-PORT}
 
 consumer.bootstrap-servers.address=localhost:9092
 spring.kafka.consumer.group-id=email
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.properties.spring.json.value.default.type=java.lang.Object
 
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+## DTO class is not in the classpath, so adding the dependency
+#spring.kafka.consumer.properties.spring.json.value.default.type=dev.pratishtha.project.userService.dtos.UserDto
 
 spring.kafka.topic_1.name=user_topics
 spring.kafka.topic_2.name=order_topics
