-Implemented POST request for sending notification for order status from Order service (Producer) and receiving message at Email notification service (Consumer).
-Added all dependencies, configurations, config classes, controller, service and dto classes.

--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -19,3 +19,9 @@ product.api.baseurl = http://localhost:9100/db/products
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#kafka configurations
+spring.kafka.producer.bootstrap-servers=bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.topic.name=order_topics
