-Implemented POST request for sending notification for cart update status from Cart service (Producer) and receiving message at Email notification service (Consumer).
-Added all dependencies, configurations, config classes, controller, service and dto classes.

--- a/CartService/src/main/resources/application.properties
+++ b/CartService/src/main/resources/application.properties
@@ -18,5 +18,12 @@ user-service.api.auth = /auth/validate
 
 product.api.baseurl = http://localhost:9100/db/products
 
+#service discovery configurations
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#kafka configurations
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.topic.name=cart_topics
