--- a/paymentService/src/main/resources/application.properties
+++ b/paymentService/src/main/resources/application.properties
@@ -22,3 +22,9 @@ order-service.api.baseurl = http://localhost:9103/api/orders
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#kafka configurations
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.topic.name=payment_topics
